# echo-demo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  METRICS.md  PRD.md  README.md  index.html  pyproject.toml  tv-install.html
.github/: actionlint.yaml  pull_request_template.md
Casks/: echodesk.rb
_state/: FACTS.yaml  INDEX.md
backend/: README.md  SECURITY_DEPENDENCY_EXCEPTIONS.md  requirements-dev.txt  requirements-extras-embedding.txt  requirements-typecheck.txt  requirements.txt
desktop/: .eslintrc.json  .gitignore  README.md  backend.config.json  capacitor.config.ts  index.html  (+11 more)
gateway/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
gateway/app/: __init__.py  auth.py  config.py  main.py  upstream.py
gateway/tests/: conftest.py  test_gateway.py
minutes_kit/: .gitignore  INTEGRATION.md  README.md  pyproject.toml
minutes_kit/demo/: README.md  server.py
minutes_kit/demo/sample_outputs/: .gitkeep
minutes_kit/demo/sample_outputs/mock_llm_meetly_demo/: data.json  minutes.docx  preview.html
minutes_kit/demo/sample_transcripts/: README.md  echo_real_meeting.txt  meetly_demo.txt
minutes_kit/src/minutes_kit/: __init__.py  _claude_backend.py  _claude_runner.py  _fallback_office.py  _harness_events.py  cli.py  demo.py  extractor.py  llm_client.py  mermaid_render.py  models.py  orchestrator.py  transcript_io.py
minutes_kit/src/minutes_kit/renderers/: __init__.py  docx.py  html.py
minutes_kit/src/minutes_kit/templates/: minutes.html.j2
minutes_kit/tests/: conftest.py
minutes_kit/tests/integration/: test_cli_e2e.py  test_demo_server.py
minutes_kit/tests/unit/: test_docx_fallback.py  test_extractor.py  test_html_renderer.py  test_models.py  test_orchestrator.py  test_transcript_io.py
(+1071 files in other folders)
