[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minutes-kit"
version = "0.1.0"
description = "独立模块：把会议转录精修成高品质会议纪要产物（HTML 预览 + Word 导出 + Mermaid 流程图）"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "echo" }]
dependencies = [
  "httpx>=0.28.0",
  "jinja2>=3.1.4",
  "python-docx>=1.1.2",
  "Pillow>=10.4.0",
  "loguru>=0.7.3",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
demo = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.20",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "anyio>=4.7.0",
]

[project.scripts]
minutes-kit = "minutes_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["minutes_kit*"]

[tool.setuptools.package-data]
"minutes_kit" = ["templates/*.j2", "static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
